第一次上传更新

--- a/java/并发.md
+++ b/java/并发.md
@@ -1,31 +1,432 @@
-# 目录
+[TOC]
 
-* [1 基本概念](#1)
-  * [1.1 同步与异步](#1.1) 
-  * [1.2 并行与并发](#1.2)
-  * [1.3 临界区](#1.3)
-  * [1.4 阻塞和非阻塞](#1.4)
-  * [1.5 活跃性问题](#1.5)
-* [2 并发级别](# 2)
-  * [2.1 阻塞](# 2.1)
-  * [2.2 无饥饿](#2.2)
-  * [2.3 无障碍](#2.3)
-  * [2.4 无锁](#2.4)
-  * [2.5 无等待](#2.5)
-  * 
+# 并行世界初入
+
+## 基本术语
+
+### 同步与异步
+
+* 同步
+
+  方法调用需要等待方法的返回。
+
+* 异步
+
+  方法调用后继续执行其他方法，待被调用方法返回后再通知线程返回执行。
+
+### 并发与并行
+
+* 并发
+
+  任务交替执行，在客户看来是并行。
+
+* 并行
+
+  多个任务同时执行，需要在多个CPU的环境下。
+
+### 临界区
+
+一种公共资源可以被多个线程使用，但==同时只能有一个线程使用==，当被一个线程占用，其他线程需要等待。
+
+### 阻塞与非阻塞
+
+阻塞和非阻塞通常用来形容多线程之间的相互影响。
+
+* 阻塞
+
+  一个线程占用了临界区资源，那么其他线程就要等待该线程释放资源，这种情况就是阻塞。
+
+* 非阻塞
+
+  没有一个线程会阻碍其他线程，所有线程都在尝试不断向前执行。
+
+### 死锁、饥饿、活锁
+
+死锁、饥饿、活锁都属于多线程的==活跃性问题==。除了活跃性问题，多线程还可能具有==安全性问题==、==性能问题==。
+
+* 死锁
+
+  每个线程都占有对方需要的资源并且不释放，这样互相都不能继续运行。
+
+* 饥饿
+
+  由于线程具有优先级问题，低优先级的线程始终得不到执行，不管是否有多余资源。
+
+* 活锁
+
+  线程之间互相谦让，都不主动争取资源，即使该资源是充足的。
+
+## 并发级别
+
+由于临界区的存在，多线程之间的并发必须收到控制。根据控制并发的策略，可以吧并发的级别分为以下几种：
+
+* 阻塞
+
+  一个线程如果阻塞的，那么在其他线程释放相关资源之前，会一直停止不执行。通过关键词`synchronized`或`重入锁`可以使线程阻塞。
+
+* 无饥饿
+
+  线程之间具有优先级，而资源的分配具有两种分配方式：==公平和非公平==，如果才用非公平锁则可能导致优先级低的线程产生饥饿。
+
+* 无障碍
+
+  所有线程都可以对临界区进行访问，当检测到共享变量被修改则会导致事务的回滚。
+
+* 无锁
+
+  无锁的并行都是无障碍的。每个线程都在无穷循环当中对共享变量进行对比修改，成果则退出临界区，否则会不断尝试，直到线程停止。
+
+* 无等待
+
+  无锁只要求==一个线程==可以在有限步内完成操作，而无等待则是要求所有线程都在有限步内完成操作。通过限制这个步骤的上线，可以进一步分解为==有界无等待==和==线程数无关的无等待==，之间的区别是==循环次数的限制不同==。
+
+## JMM
+
+### 原子性
+
+一个操作不可中断，即使多个线程在一起执行，一个操作一旦开始，就不会被其他线程干扰。
+
+### 可见性
+
+当一个线程修改了共享变量后，其他线程可以立即知道这个变化。在串行程序中不存在问题，但是在并行程序中，由于编码器或者硬件优化，在每个线程中存在缓存器，会导致不可见性。
+
+### 有序性
+
+在并发当中，代码的执行顺序可能存在重新排列，并不会按照从上到下的顺序进行。
+
+**注意：**指令重排可以保证串行语义一致，但是没有义务保证多线程间的语义一致。
+
+### Happen-Before规则
+
+指定了那些指令不能重排
+
+* 程序顺序原则：一个线程内保证语义的串行性
+* volatile规则：写先于读发生，保证变量的可见性
+* 锁规则
+* 传递性
+* 线程的`start()`方法先于它的每一个动作
+* 线程的所有操作先于线程的终结
+* 线程的中断先于被中断线程的代码
+* 构造函数的执行、结束先于`finalize()`方法
 
 
 
-<h1 id ="1">基本概念</h1>
+# 并行程序基础
 
-<h2 id ="1.1">同步与异步</h2>
+## 线程与进程的区别
 
-**同步：**需要等待方法调用的返回。
+1. 一个进程可以拥有多个线程，进程之间是互相独立的，而同一个进程的多个线程是共享该进程的资源。
+2. 进程的切换耗费的资源比线程的切换大。
+3. 线程是处理器调度的基本单位，但是进程不是；进程是系统进行资源分配和调度的基本单位。
+4. 进程是程序的实体，是“活”的，而程序是静态的，是指令、数据及其组织形式的描述。
 
-**异步：**当调用方法时候，可以先去执行其他方法，等调用方法执行完毕会通知线程
+## 线程的生命周期
 
-<h2 id=1.2>并行与并发</h2>
+![image-20200119150713369](C:\Users\87360\AppData\Roaming\Typora\typora-user-images\image-20200119150713369.png)
 
-**并行：**多个任务同时运行，只会发生在`多CPU`；
+**注意：**block、wait以及sleep的区别
 
-**并发：**多个任务交替执行，在客户看来是并行运行；
+> block是由于线程想获得锁资源，但是获得不到，导致阻塞，该线程会放置于阻塞队列。
+>
+> wait是在获得CPU和相关资源的前提下，请求其他资源后，导致线程等待，会释放CPU和相关锁，并且放置于等待队列。
+>
+> sleep只会释放CPU资源，不会释放占有的锁，当时间结束会继续执行，而wait的线程自会重新竞争锁。
+
+## 线程的基本操作
+
+### 新建线程
+
+新建线程分为两种方法：
+
+* 使用关键词`new`
+* 使用线程池
+
+**注意：**线程的run和start启动的区别
+
+> run方法相当于在当前线程中串行执行了调用方法，没有启动多线程，而start则启动了多线程。
+
+### 终止线程
+
+线程的终止分为三种情况：
+
+* 线程正常执行完毕退出
+* 线程执行过程异常退出：包括中断
+* 人为强制退出：比如`stop`，可能造成数据的不一致性
+
+### 线程中断
+
+线程中断只是给线程发送一个通知，由线程决定什么时候中断最合适。
+
+线程中断的方法主要有以下三个：
+
+* `public void Thread.interrupt()`
+
+  中断线程，是一个实例方法。
+
+* `public boolean Thread.isInterruped()`
+
+  判断线程是否终止，返回一个`boolean`值，实例方法。
+
+* `public static boolean Thread.interrupted()`
+
+  判断是否中断，返回一个`boolean`值，静态类方法。
+
+**注意：**`Thread.sleep() 和 Object.wait()`方法如果抛出中断异常，则会清除中断标志，所以为了上下文信息的一直，需要在捕获异常当中重新抛出中断标志。
+
+### 等待（wait）和通知（notify）
+
+两个方法必须成对存在，并且是在同步块当中，起到线程之间的通信作用。
+
+**注意：**该方法属于`Object类`，并且是`final`方法。
+
+`wait()`和`notify()`方法的工作流程如下图所示：
+
+![image-20200119210335111](C:\Users\87360\AppData\Roaming\Typora\typora-user-images\image-20200119210335111.png)
+
+### 挂起和继续执行
+
+`suspend()`方法会导致线程挂起，并且不会释放资源，这样会导致其他相关线程阻塞，需要等到`resume()`该线程后，其他线程才有机会执行。但是这里存在一个问题，`resume()`可能会在`suspend()`方法之前执行，这样会导致线程无法继续执行。
+
+### 结束(join)和谦让(yeild)
+
+1. join
+
+一个线程的输入可能依赖于另外一个或多个线程的输出。==JDK==提供了`join()`方法来实现这个功能，方法如下：
+
+* `public final void join() throws InterruptedException`
+* `public final synchronized void join(long millis) throws InterruptedException`
+
+**注意：**`join`方法实际是调用的线程实例对象上的`wait`方法，所以在应用程序中，不要再`Thread`对象实例上使用类似`wait()`或者`notify（）`
+
+2. yeild
+
+该方法是一个静态方法，让当前线程让出CPU资源，但是可以再次争夺资源，只不过不一定能够争取到。
+
+## volatile与Java内存模型(JMM)
+
+Java内存模型是基于==原子性、可见性与有序性==，`volatile`关键词只能保证可见性，但是对于原子性不能保证，特别是复合操作的情况下
+
+## 线程组
+
+将相同功能的线程放置在同一线程组里。
+
+**注意：**线程组有一个优先级，加入的线程优先级不能大于改优先级，如果大于，则会自动变为和线程组同样的优先级问题
+
+## 守护线程
+
+线程分为守护线程和用户线程，当程序只剩下守护线程的时候，会自动退出。守护线程的相关方法为`setDemon()`，并且需要在`start()`方法前设置
+
+## 线程优先级
+
+通过`setPriority()`方法可以设置线程的优先级，并且数字越大优先级越高
+
+## 线程安全的概念与synchronized
+
+`volatile关键词`只能保证线程共享变量的可见性，并不能保证原子性，所以需要`synchronized`来保证线程安全，可以使线程同步。
+
+该关键词可以获得以下三种锁对象：
+
+* 指定加锁对象
+* 直接作用于实例方法
+* 直接作用于静态方法
+
+
+
+# JDK并发包
+
+## 同步控制
+
+前文介绍了关键词`synchronized`来进行同步控制。并且通过`Object.wait()和Object.notify()`进行线程间的通行，接下来将介绍其他的同步控制方法。
+
+### 可重入锁（ReentrantLock）
+
+可重入锁可以被中断（`lockInterruptibly`），也可以有限等待(`trylock`)，且可以通过构造可重入锁的时候决定是否公平。
+
+`ReentrantLock`由以下重要方法：
+
+* `lock()`:获得锁，并且和`unlock`配套使用
+* `lockInterruptibly()`：获得锁，且可被中断
+* `tryLock`：尝试获取锁，成功则返回`true`，失败则返回`false`
+
+**注意：**重点了解实现原理，也就是源码分析，后期需要做。
+
+### Condition
+
+ 作用和`Object.wait()和Object.notify()`相同，只不过`wait和notify`需要和`synchronized`连起来用。而`Condition`则是和可重入锁连起来用。
+
+### 信号量（Semaphore）
+
+允许多个线程对临界区变量进行同时访问。主要方法如下：
+
+* `acquire()`
+* `acquireUninterruptibly()`：该方法不能被打断
+* `tryAcquire()`：失败则直接返回`false`，成功则返回`true`
+* `tryAcquire(long timeout, TimeUnit unit)`
+* `release()`
+
+### 读写锁（ReadWriteLock）
+
+可重入锁和内部锁都是通过线程串行来保证安全性，而对于读操作来说，不会对数据进行修改，所以可以通过并行操作。`ReadWriteLock`就是用于读写操作的，读的时候并行，写的时候串行。具体情况如下：
+
+|      | 读     | 写   |
+| ---- | ------ | ---- |
+| 读   | 非阻塞 | 阻塞 |
+| 写   | 阻塞   | 阻塞 |
+
+### 倒计数器(CountDownLatch)
+
+用在一个线程等待其他线程都执行完毕后才开始执行。
+
+### 循环栅栏（CyclicBarrier）
+
+用来控制多线程的并发，和`CountDownLacth`功能有点相似，表示所有线程都要到达具体位置后，才能往下执行，并且是可重复利用。
+
+`CyclicBarrier`的异常总共有两个，一个是普通的==中断异常==，还有一个是==特有的BrokenBarrierException异常==。
+
+### 线程阻塞工具类(LockSupport)
+
+常用方法如下：
+
+* 静态方法`park()`
+
+  用于阻塞当前线程
+
+* `parkNanos()`
+
+  限时等待
+
+* `parkUntil()`
+
+  限时等待
+
+该阻塞工具是使线程获得一个许可，如果又改许可，则不会阻塞，否则阻塞等待，且该许可只可以获得一个，所以不会受到`park和unpark`的执行顺序影响。
+
+该阻塞工具对于中断异常的处理是直接返回，不会抛出异常。
+
+### Guava工具之RateLimiter限流
+
+传统限流算法采用计数方法，如果1s只能处理10个请求，如果1s的后半秒才处理10个，下1s的前半秒处理10个，则会导致这连续的一秒钟会处理20个。
+
+针对该缺点，更加一般化的限流算法有两种：
+
+* 漏桶算法
+
+* 令牌桶算法
+
+## 线程池             
+
+为了避免系统频繁地创建和销毁线程，通过线程池可以对线程进行复用。
+
+**线程池的作用如下：**
+
+![image-20200216101651319](C:\Users\87360\AppData\Roaming\Typora\typora-user-images\image-20200216101651319.png)
+
+### JDK相关方法
+
+**Executor框架图如下：**
+
+![image-20200216103827429](C:\Users\87360\AppData\Roaming\Typora\typora-user-images\image-20200216103827429.png)
+
+其中`Executors`扮演者线程池工厂的角色，可以创建具有特定功能的线程池。通过该类可以实现以下工厂方法：
+
+> `public static ExecutorService newq FixedThreadPool(int nThreads)`
+>
+> `public static ExecutroService newSingleThreadExecutor()`
+>
+> `public static ExecutorService newCacheThreadPool()`
+
+### 线程池的内部实现
+
+所有工厂方法都是对`ThreadPoolExecutor`类的封装。其中`ThreadPoolExecutor`的构造函数如下:
+
+```java
+    public ThreadPoolExecutor(int corePoolSize,
+                              int maximumPoolSize,
+                              long keepAliveTime,
+                              TimeUnit unit,
+                              BlockingQueue<Runnable> workQueue,
+                              ThreadFactory threadFactory,
+                              RejectedExecutionHandler handler) 
+```
+
+其中的`workQueue`的任务队列有以下几种：
+
+* SynchronousQueue
+
+  直接提交的队列，没有容量，每次都将新提交的任务交给线程执行，如果没有空闲线程，则会尝试创建新的进程，如果达到最大线程，则会执行拒绝策略。
+
+* ArrayBlockingQueue
+
+  有界任务队列，当有新任务的时候，并且线程池的实际线程数小于==corePoolSize==，则会优先创建新的线程，若大于==corePoolSize==，则会将新任务加入等待队列，如果等待队列满，且线程数不大于==maximumPoolSize==,则会创建新的线程执行任务，否则执行拒绝策略。
+
+* LinkedBlockingQueue
+
+  无界的任务队列
+
+* PriorityBlockingQueue
+
+  优先任务队列，一个特殊的无界队列
+
+**ThreadPoolExecutor的任务调度逻辑:**
+
+![image-20200217094351939](C:\Users\87360\AppData\Roaming\Typora\typora-user-images\image-20200217094351939.png)
+
+### 拒绝策略
+
+JDK内置的拒绝策略如下：
+
+* AbortPolicy策略:该策略会直接抛出异常，阻止系统正常工作。
+
+* CallerRunsPolicy策略:只要线程池未关闭，该策略直接在调用者线程中，运行当前
+  被丢弃的任务。显然这样做不会真的丟弃任务，但是，任务提交线程的性能极有可
+  能会急剧下降。
+  
+* DiscardOldestPolicy策略:该策略将丢弃最老的一一个请求，也就是即将被执行的一一个
+  任务，并尝试再次提交当前任务。
+  
+* DiscardPolicy策略:该策略默默地丢弃无法处理的任务，不予任何处理。
+
+### 自定义线程创建
+
+通过自定义实现`ThreadFactory`来实现自定义线程创建
+
+### 线程池扩展
+
+通过对`ThreadFactory`中的三个接口`beforeExecute、afterExecute、terminated`进行自定义，可以对线程创建进行一定的监控。
+
+### Fork和join
+
+该框架可以对一个任务进行分解，任务方法为`ForkJoinTask`。
+
+## JDK并发容器
+
+### 并发集合
+
+* ConcurrentHashMap
+
+  线程安全的`HashMap`
+
+* CopyOnWriteArrayList
+
+  线程安全的`List`，多用于读多写少的场合。
+
+* ConcurrentLinkedQueue
+
+  高效的并发队列，使用链表实现。
+
+* BlockingQueue
+
+  **接口类**，JDK内部通过链表、数组等方式实现这个接口，表示阻塞队列。通常用于数据共享的通道。
+
+* ConcurrentSKipListMap
+
+  跳表的实现。
+
+
+
+  
+
+
+
+
+
